force-app/main/default/objects/ISC_Queue_Setting__c/ISC_Queue_Setting__c.object-meta.xml
<CustomObject>
    <label>Queue Setting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queue Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>