force-app/main/default/objects/ISC_Queue_Setting__c/fields/Agent_Assignable__c.field-meta.xml
<CustomField>
    <fullName>Agent_Assignable__c</fullName>
    <label>Agent Assignable</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Allowable</valueSetName>
    </valueSet>
</CustomField>