force-app/main/default/objects/ISC_Queue_Setting__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <formula>System_Queue__r.Inactive__c</formula>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>