force-app/main/default/objects/ISC_Queue_Setting__c/fields/ISC_Default_Category__c.field-meta.xml
<CustomField>
    <fullName>ISC_Default_Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Default Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ISC_Category__c.Queue__c</field>
            <operation>equals</operation>
            <valueField>$Source.System_Queue__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ISC_Category__c</referenceTo>
    <relationshipLabel>Queue Settings</relationshipLabel>
    <relationshipName>Queue_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>