force-app/main/default/objects/ISC_Queue_Setting__c/fields/Notifications__c.field-meta.xml
<CustomField>
    <fullName>Notifications__c</fullName>
    <label>Notifications</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISC_Notification_Option</valueSetName>
    </valueSet>
</CustomField>