force-app/main/default/objects/ISC_Queue_Setting__c/fields/Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Queue_ID__c</fullName>
    <formula>System_Queue__r.ObjectID__c</formula>
    <label>Queue ID</label>
    <type>Text</type>
</CustomField>