force-app/main/default/objects/ISC_Queue_Setting__c/fields/Send_from_address__c.field-meta.xml
<CustomField>
    <fullName>Send_from_address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Send from address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ISC_System_Record__c.Type__c</field>
            <operation>equals</operation>
            <value>Org Wide Address</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ISC_System_Record__c</referenceTo>
    <relationshipLabel>Queue Settings (Send from address)</relationshipLabel>
    <relationshipName>Queue_Sender</relationshipName>
    <type>Lookup</type>
</CustomField>