force-app/main/default/objects/ISC_Queue_Setting__c/fields/SLA_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>SLA_Entitlement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SLA Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Queue Settings</relationshipLabel>
    <relationshipName>Queue_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>