force-app/main/default/objects/ISC_Queue_Setting__c/fields/System_Queue__c.field-meta.xml
<CustomField>
    <fullName>System_Queue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>System Queue</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ISC_System_Record__c.Type__c</field>
            <operation>equals</operation>
            <value>Queue</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ISC_System_Record__c</referenceTo>
    <relationshipLabel>Queue Settings</relationshipLabel>
    <relationshipName>Queues</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>