force-app/main/default/objects/ISC_Queue_Setting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Queue_ID__c</columns>
    <columns>NAME</columns>
    <columns>Inactive__c</columns>
    <columns>Send_from_address__c</columns>
    <columns>Notifications__c</columns>
    <columns>SLA_Entitlement__c</columns>
    <columns>Agent_Assignable__c</columns>
    <columns>ISC_Default_Category__c</columns>
    <columns>System_Queue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>